Implementación de HCaptcha

--- a/Android/HCaptcha/app/src/main/AndroidManifest.xml
+++ b/Android/HCaptcha/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:theme="@style/Theme.HCaptcha"
         tools:targetApi="31">
         <activity
+            android:name=".HCaptchaActivity"
+            android:exported="false"
+            android:theme="@style/Theme.AppCompat.DayNight" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.HCaptcha">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +26,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <meta-data
+            android:name="com.hcaptcha.sdk.site-key"
+            android:value="..." /> <!-- HCaptcha site key -->
     </application>
 
 </manifest>
