--- a/Android/Meals/gradle/libs.versions.toml
+++ b/Android/Meals/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.3.0"
-kotlin = "1.9.0"
-coreKtx = "1.12.0"
+agp = "8.3.2"
+kotlin = "2.0.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2024.02.01"
+lifecycleRuntimeKtx = "2.8.2"
+activityCompose = "1.9.0"
+composeBom = "2024.06.00"
 navigationCompose = "2.7.7"
-coil = "1.4.0"
+coil = "2.6.0"
 hilt = "2.50"
 hiltNavigation = "1.2.0"
 retrofit = "2.9.0"
@@ -40,7 +40,5 @@ hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-com
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-# dagger hilt
 hiltPlugin = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
-
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
