--- a/Android/Notes/gradle/libs.versions.toml
+++ b/Android/Notes/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ mockito = "5.11.0"
 room = "2.6.1"
 hilt = "2.50"
 hiltNavigationCompose = "1.2.0"
+navigationCompose = "2.8.0-beta03"
+serialization = "1.7.0"
 
 
 [libraries]
@@ -38,9 +40,12 @@ room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+kotlinx-serialization-json = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "serialization" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
 jetbrainsKotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 daggerHilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
