--- a/React-Native/08-ComponentsApp/ios/components/Info.plist
+++ b/React-Native/08-ComponentsApp/ios/components/Info.plist
@@ -50,7 +50,7 @@
 	<false/>
 	<key>UIAppFonts</key>
 	<array>
-	<string>MaterialIcons.ttf</string>
+	<string>Ionicons.ttf</string>
 	</array>
 </dict>
 </plist>
