--- a/React-Native/10-MapsApp/ios/mapsapp/Info.plist
+++ b/React-Native/10-MapsApp/ios/mapsapp/Info.plist
@@ -48,5 +48,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+    <!-- Agregar las fuentes requeridas -->
+    <string>Ionicons.ttf</string>
+</array>
 </dict>
 </plist>
