--- a/React-Native/10-MapsApp/package.json
+++ b/React-Native/10-MapsApp/package.json
@@ -19,7 +19,8 @@
     "react-native-permissions": "^5.2.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
