--- a/React-Native/10-MapsApp/package.json
+++ b/React-Native/10-MapsApp/package.json
@@ -16,6 +16,7 @@
     "react": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "^2.20.2",
+    "react-native-maps": "^1.20.1",
     "react-native-permissions": "^5.2.1",
     "react-native-safe-area-context": "^4.14.0",
     "react-native-screens": "^4.0.0",
