--- a/React-Native/11-ProductsApp/package.json
+++ b/React-Native/11-ProductsApp/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@ui-kitten/components": "^5.3.1",
     "@ui-kitten/eva-icons": "^5.3.1",
+    "axios": "^1.7.9",
     "react": "18.3.1",
     "react-native": "0.76.5",
     "react-native-gesture-handler": "^2.21.2",
