--- a/React-Native/11-ProductsApp/package.json
+++ b/React-Native/11-ProductsApp/package.json
@@ -22,7 +22,8 @@
     "react-native-gesture-handler": "^2.21.2",
     "react-native-safe-area-context": "^5.0.0",
     "react-native-screens": "^4.3.0",
-    "react-native-svg": "^15.10.1"
+    "react-native-svg": "^15.10.1",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
