--- a/React-Native/11-ProductsApp/ios/products/Info.plist
+++ b/React-Native/11-ProductsApp/ios/products/Info.plist
@@ -48,5 +48,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Se necesita acceso a la galería de fotos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Se necesita acceso a la cámara</string>
 </dict>
 </plist>
