--- a/React-Native/08-ComponentsApp/ios/components/Info.plist
+++ b/React-Native/08-ComponentsApp/ios/components/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>components</string>
+	<string>RN Components</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
