--- a/React-Native/08-ComponentsApp/android/app/build.gradle
+++ b/React-Native/08-ComponentsApp/android/app/build.gradle
@@ -83,9 +83,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace "com.components"
+    namespace "mx.dev.cmg.reactnative.components"
     defaultConfig {
-        applicationId "com.components"
+        applicationId "mx.dev.cmg.reactnative.components"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
