--- a/Android/JetAI/gradle/libs.versions.toml
+++ b/Android/JetAI/gradle/libs.versions.toml
@@ -13,6 +13,8 @@ splashScreen = "1.0.1"
 navigationCompose = "2.8.5"
 viewmodelCompose = "2.8.7"
 coil = "3.0.4"
+googleServices = "4.4.2"
+playServices = "21.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -39,9 +41,11 @@ viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-
 lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "viewmodelCompose" }
 ui-util-compose = { group = "androidx.compose.ui", name = "ui-util" }
 coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+play-services = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServices" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 
