--- a/Android/JetAI/gradle/libs.versions.toml
+++ b/Android/JetAI/gradle/libs.versions.toml
@@ -15,6 +15,8 @@ viewmodelCompose = "2.8.7"
 coil = "3.0.4"
 googleServices = "4.4.2"
 playServices = "21.3.0"
+generativeai = "0.9.0"
+secretsGradlePlugin = "2.0.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,10 +44,12 @@ lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-ru
 ui-util-compose = { group = "androidx.compose.ui", name = "ui-util" }
 coil = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
 play-services = { group = "com.google.android.gms", name = "play-services-auth", version.ref = "playServices" }
+generativeai = { group = 'com.google.ai.client.generativeai', name = 'generativeai', version.ref = 'generativeai' }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
+secrets-gradle = { id = "com.google.android.libraries.mapsplatform.secrets-gradle-plugin", version.ref = "secretsGradlePlugin" }
 
