--- a/Android/JobScheduler/app/src/main/AndroidManifest.xml
+++ b/Android/JobScheduler/app/src/main/AndroidManifest.xml
@@ -29,7 +29,17 @@
         </activity>
 
         <service
-            android:name=".source.impl.jobscheduler.MyJobService"
+            android:name=".source.impl.jobscheduler.OneDayNoLoginJobService"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".source.impl.jobscheduler.Engagement30Service"
+            android:permission="android.permission.BIND_JOB_SERVICE"
+            android:enabled="true"
+            android:exported="false" />
+        <service
+            android:name=".source.impl.jobscheduler.Engagement60Service"
             android:permission="android.permission.BIND_JOB_SERVICE"
             android:enabled="true"
             android:exported="false" />
