--- a/Android/VertexChat/gradle/libs.versions.toml
+++ b/Android/VertexChat/gradle/libs.versions.toml
@@ -9,8 +9,6 @@ lifecycleRuntimeKtx = "2.9.0"
 activityCompose = "1.10.1"
 composeBom = "2025.05.00"
 firebaseBom = "33.13.0"
-navigationCompose = "2.9.0"
-serialization = "1.8.1"
 hilt = "2.56.1"
 hiltNavigation = "1.2.0"
 ksp = "2.1.10-1.0.31"
@@ -32,6 +30,7 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 firebase-bom = { group = "com.google.firebase", name = "firebase-bom", version.ref = "firebaseBom" }
 firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics" }
+firebase-vertexai = { group = "com.google.firebase", name = "firebase-vertexai" }
 hilt = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigation" }
